force-app/main/default/objects/Agreement__c/fields/Quote_Document__c.field-meta.xml
<CustomField>
    <fullName>Quote_Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Document</label>
    <referenceTo>SBQQ__QuoteDocument__c</referenceTo>
    <relationshipLabel>Agreements</relationshipLabel>
    <relationshipName>Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>