force-app/main/default/objects/Agreement__c/fields/Source_Document_Number__c.field-meta.xml
<CustomField>
    <fullName>Source_Document_Number__c</fullName>
    <label>Source  Document Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>