force-app/main/default/objects/Agreement__c/fields/x_Core_Legacy_Id__c.field-meta.xml
<CustomField>
    <fullName>x_Core_Legacy_Id__c</fullName>
    <label>Core Legacy Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>